more functionality added
most of the functionality has now been added. some refining tweaks
needed to make sure it acts as a calculator should.

will need to make it so the operator buttons can be used after
a click of the equals buttons.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@ body {
 #display-container {
     height: 60px;
     width: 400px;
+    padding: 0;
+    margin: 0;
+}
+
+#operators-container {
+    display: flex;
+    height: 50px;
+    padding: 0;
+    margin: 0;
 }
 
 #display {
@@ -71,4 +80,8 @@ body {
 #clear {
     height: 100px;
     width: 100px;
+}
+
+.operators {
+    background-color: burlywood;
 }
