--- a/style.css
+++ b/style.css
@@ -6,20 +6,27 @@ body {
 }
 
 #container {
-    background-color: rgba(240,240,240,1);
+    background-color: rgba(0,0,100,1);
     display: flex;
     flex-direction: column;
     gap: 5px;
     border-style: solid;
-    border-width: 3px;
-    border-radius: 3px;
+    border-width: 2px;
+    border-radius: 6px;
+    padding: 4px;
 }
 
 #display-container {
-    height: 60px;
-    width: 400px;
     padding: 0;
     margin: 0;
+    border-radius: 4px;
+    border-color: #000;
+    border-radius: 5px;
+}
+
+#display {
+    border-radius: 4px;
+
 }
 
 #operators-container {
@@ -54,8 +61,9 @@ body {
     margin: 0;
     width:  100px;
     height: 50px;
-    background-color: #AFF;
+    background-color: rgba(100,100,210,1);
     border-radius: 6px;
+    border-color: black;
 }
 
 #decimal {
@@ -63,8 +71,9 @@ body {
     margin: 0;
     width: 200px;
     height: 50px;
-    background-color: #AFF;
+    background-color: rgba(100,100,210,1);
     border-radius: 6px;
+    border-color: black;
 }
 
 #right-buttons-container {
@@ -83,5 +92,6 @@ body {
 }
 
 .operators {
-    background-color: burlywood;
+    background-color: #333;
+    color: #EEE;
 }
